--- a/src/views/game.pug
+++ b/src/views/game.pug
@@ -4,11 +4,12 @@ head
     meta(name='viewport' content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='ie=edge')
     title Juega
-h1 Código de partida: #{code}
+h1 Código de partida: &nbsp;
+    span#code #{code}
 h1 Jugadores conectados: &nbsp;
     span#players
 
-input(type="hidden" value=code)
+input(type="hidden" value=code id="codeInput")
 
 script(src="/socket.io/socket.io.js")
-script(src="/js/main.js")
+script(src="/js/game.js")
