--- a/src/views/game.pug
+++ b/src/views/game.pug
@@ -10,6 +10,11 @@ h1 Código de partida: &nbsp;
 h1 Jugadores conectados: &nbsp;
     span#players
 
+div#game
+    form#wordForm
+        .group-input
+            label(for="word")
+
 input(type="hidden" value=code id="codeInput")
 
 script(src="/socket.io/socket.io.js")
