Show player names

--- a/src/views/game.pug
+++ b/src/views/game.pug
@@ -8,6 +8,7 @@ div#loader.loader
 h1 Código de partida: &nbsp;
     span#code #{code}
 h1 Jugadores conectados: &nbsp;
+    span#totalPlayers
     span#players
 
 div#game
