--- a/src/views/game.pug
+++ b/src/views/game.pug
@@ -3,6 +3,7 @@ head
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='ie=edge')
+    link(rel="stylesheet" href="/css/main.css")
     title Juega
 div#loader.loader
 h1 Código de partida: &nbsp;
@@ -12,6 +13,8 @@ h1 Jugadores conectados: &nbsp;
     span#players
 
 div#game
+    button#start Start
+
     form#wordForm
         .for-group
             label(for="word") Escríbe en una palabra:
